// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodePanelNetworkField renders the field 1`] = `
<Memo(NodePanelField)
  name="Network"
>
  <WithStyles(Typography)
    inline={true}
    variant="overline"
  >
    testnet
  </WithStyles(Typography)>
</Memo(NodePanelField)>
`;

exports[`NodePanelNetworkField renders the field when no network 1`] = `
<Memo(NodePanelField)
  name="Network"
>
  <WithStyles(Typography)
    inline={true}
    variant="overline"
  >
    ?
  </WithStyles(Typography)>
</Memo(NodePanelField)>
`;

exports[`NodePanelNetworkField will receive right props 1`] = `
Object {
  "network": "testnet",
}
`;
